<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:contentDescription="TODO"
        android:src="@drawable/calmed_storm"
        app:layout_constraintBottom_toBottomOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/appName">
    </ImageView>

    <TextView
        android:id="@+id/appName"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:text="Calm The Storm"
        android:textColor="#232323"
        android:textSize="39sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageButton
        android:id="@+id/volcanoBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="getDisasterDetail"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wildfireBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/wildfireBtn"
        app:layout_constraintTop_toBottomOf="@+id/wildfireBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/volcano" />

    <TextView
        android:id="@+id/volcanoBtnText"
        android:layout_width="113dp"
        android:layout_height="69dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="Volcano Eruption"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/volcanoBtn"
        app:layout_constraintStart_toStartOf="@+id/volcanoBtn"
        app:layout_constraintTop_toTopOf="@+id/volcanoBtn"
        app:layout_constraintVertical_bias="0.548" />

    <ImageButton
        android:id="@+id/tornadoBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="140dp"
        android:onClick="getDisasterDetail"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tornado" />

    <ImageButton
        android:id="@+id/earthquakeBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="getDisasterDetail"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="@+id/tornadoBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tornadoBtn"
        app:layout_constraintTop_toBottomOf="@+id/tornadoBtn"
        app:srcCompat="@drawable/earthquake" />

    <TextView
        android:id="@+id/earthquakeBtnText"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Earthquake"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/earthquakeBtn"
        app:layout_constraintStart_toStartOf="@+id/earthquakeBtn"
        app:layout_constraintTop_toTopOf="@+id/earthquakeBtn"
        app:layout_constraintVertical_bias="0.508" />

    <ImageButton
        android:id="@+id/wildfireBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="getDisasterDetail"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="@+id/earthquakeBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/earthquakeBtn"
        app:layout_constraintTop_toBottomOf="@+id/earthquakeBtn"
        app:srcCompat="@drawable/wildfire" />

    <TextView
        android:id="@+id/wildfireBtnText"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Wildfire"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/wildfireBtn"
        app:layout_constraintStart_toStartOf="@+id/wildfireBtn"
        app:layout_constraintTop_toTopOf="@+id/wildfireBtn"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/tornadoBtnText"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Tornado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tornadoBtn"
        app:layout_constraintStart_toStartOf="@+id/tornadoBtn"
        app:layout_constraintTop_toTopOf="@+id/tornadoBtn"
        app:layout_constraintVertical_bias="0.488" />

</androidx.constraintlayout.widget.ConstraintLayout>