<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="getSurvivalKit"
    tools:context=".DisasterDetailsActivity">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:contentDescription="TODO"
        android:src="@drawable/calmed_storm"
        app:layout_constraintBottom_toBottomOf="@+id/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/appName">

    </ImageView>

    <ImageView
        android:id="@+id/disasterAlerts"
        android:layout_width="44dp"
        android:layout_height="36dp"
        android:layout_marginStart="328dp"
        android:layout_marginLeft="328dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="@drawable/disaster_alert">

    </ImageView>

    <TextView
        android:id="@+id/appName"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="279dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:text="Calm The Storm"
        android:textColor="#232323"
        android:textSize="39sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageButton
        android:id="@+id/disasterInfoBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="128dp"
        android:onClick="getDisasterInfo"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/mapsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"
        app:srcCompat="@drawable/disaster_info" />

    <TextView
        android:id="@+id/disasterBtnText"
        android:layout_width="147dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:text="Disaster Information"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/disasterInfoBtn"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/disasterInfoBtn"
        app:layout_constraintTop_toTopOf="@+id/disasterInfoBtn" />

    <ImageButton
        android:id="@+id/mapsBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:onClick="getMap"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toTopOf="@+id/survivalKitBtn"
        app:layout_constraintEnd_toEndOf="@+id/disasterInfoBtn"
        app:srcCompat="@drawable/safe_map" />

    <TextView
        android:id="@+id/mapsBtnText"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:text="Safe Locations"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/mapsBtn"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/mapsBtn"
        app:layout_constraintTop_toTopOf="@+id/mapsBtn" />

    <ImageButton
        android:id="@+id/survivalKitBtn"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="160dp"
        android:onClick="getSurvivalKit"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mapsBtn"
        app:srcCompat="@drawable/survivol_kit" />

    <TextView
        android:id="@+id/survivalKitText"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="Survival Kits"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/survivalKitBtn"
        app:layout_constraintTop_toTopOf="@+id/survivalKitBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>